Implement creating customer
