# ecommerce-nodejs-api/swagger.json
@@ -22,6 +22,30 @@
       "get": {
         "tags": ["Customers"],
         "summary": "Get all customers in system",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Customers"
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["Customers"],
+        "summary": "Create a new customer in system",
+        "parameters": [
+          {
+            "name": "Add user",
+            "in": "body",
+            "description": "To create a new customer in system",
+            "schema": {
+              "$ref": "#/definitions/CustomerRequest"
+            }
+          }
+        ],
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "OK",
@@ -47,6 +71,7 @@
           }
         ],
         "summary": "Get all customers in system",
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "OK",
@@ -66,6 +91,45 @@
           "type": "integer",
           "uniqueItems": true
         },
+        "first_name": {
+          "type": "string",
+          "example": "Chamrong"
+        },
+        "last_name": {
+          "type": "string",
+          "example": "Thor"
+        },
+        "gender": {
+          "type": "integer",
+          "minimum": 0,
+          "maximum": 1,
+          "note": "0: Female 1: Male",
+          "pattern": "^[10]{1}$"
+        },
+        "dob": {
+          "type": "date",
+          "format": "date",
+          "pattern": "/([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/",
+          "example": "2019-05-17"
+        },
+        "tel": {
+          "type": "string",
+          "pattern": "^[0-9+]{10,16}$",
+          "example": "097245799"
+        },
+        "email": {
+          "type": "string",
+          "format": "email",
+          "example": "meas.pech@onekh.info"
+        },
+        "is_active": {
+          "type": "boolean"
+        }
+      }
+    },
+    "CustomerRequest": {
+      "required": [],
+      "properties": {
         "first_name": {
           "type": "string",
           "example": "Chamrong"
